# Python-Virtual-Pet

./: README.md  pyproject.toml
data/: pet.json
tests/: test_utilities.py
virtual_pet/: main.py  pet.py  possible_pets.py  utilities.py
