[tool.poetry]
name = "virtual-pet"
version = "0.1.0"
description = ""
authors = ["Prica277 <prica277@hsd.k12.or.us>"]
readme = "README.md"
packages = [{include = "virtual_pet"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
